2009-10-09  Robert Millan  <rmh.grub@aybabtu.com>

	Fail gracefuly when attempting to load 64-bit kFreeBSD on IA32 CPU.

	* include/grub/i386/cpuid.h: New file.
	* commands/i386/cpuid.c: Include `<grub/i386/cpuid.h>'.
	(has_longmode): Rename to ...
	(grub_cpuid_has_longmode): ... this.  Update all users.  Remove
	`static' attribute.
	* loader/i386/bsd.c: Include `<grub/i386/cpuid.h>'.
	(grub_bsd_load_elf): Fail if load of 64-bit kernel was requested
	on a CPU that doesn't implement AMD64 instruction set.

2009-10-06  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in (docs/stamp-vti): Depend on configure.ac as well, so
	that version.texi is rebuilt on version number changes.

2009-10-06  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in: Don't set info_INFOS unless makeinfo was found.
	Fixes bug #27602.

2009-10-06  Colin Watson  <cjwatson@ubuntu.com>

	* util/i386/pc/grub-install.in: Source
	${libdir}/grub/grub-mkconfig_lib before option processing, in order
	that the --grub-probe option will work.
	* util/sparc64/ieee1275/grub-install.in: Likewise.

2009-10-05  Robert Millan  <rmh.grub@aybabtu.com>

	* configure.ac: Bump version to 1.97~beta4.

2009-10-03  Robert Millan  <rmh.grub@aybabtu.com>

	Resync grub-mkdevicemap in x86_64-efi.

	* conf/x86_64-efi.rmk (sbin_UTILITIES): Enable `grub-mkdevicemap'.
	(grub_mkdevicemap_SOURCES): Add missing `util/deviceiter.c' and
	`util/devicemap.c'.

2009-10-01  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-editenv.c (create_envblk_file): Write new block with a
	.new suffix and then rename it into place, to ensure atomic
	creation.

2009-09-28  Robert Millan  <rmh.grub@aybabtu.com>

	Do not automatically install headers.

	* Makefile.in (include_DATA): Remove.  Update all users.

2009-09-26  Robert Millan  <rmh.grub@aybabtu.com>

	* conf/common.rmk (pkglib_MODULES): Remove `lua.mod'.
	(lua_mod_SOURCES, lua_mod_CFLAGS, lua_mod_LDFLAGS): Remove.

	* util/osdetect.lua: Remove.
	* script/lua/lauxlib.c: Likewise.